add route for step 2
